a few bug fixes and changing the text contrast

--- a/css/scss/_modules.scss
+++ b/css/scss/_modules.scss
@@ -4,7 +4,7 @@
 
 /* ----- THE HR LINE ---- */
 .line {
-    background-color:$headColor;
+    background-color:$lineColor;
     width:6em;
     height:1px;
     margin:0 auto 0.5em;
