--- a/css/scss/writeup.scss
+++ b/css/scss/writeup.scss
@@ -14,7 +14,7 @@
 
 /* ----- THE HR LINE ---- */
 .line {
-    background-color:$headColor;
+    background-color:$lineColor;
     width:6em;
     height:1px;
     margin:0 auto 0.5em;
@@ -31,6 +31,7 @@
     a:link,
     a:visited {
         color:$darkColor;
+        text-decoration:underline;
     }
     a:hover,
     a:active {
